# NutriRoll

./: .gitignore  Makefile  PROJECT_VISION.md  README.md  docker-compose.yml  lefthook.yml
server/: .env.example  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py  script.py.mako
server/alembic/versions/: .gitkeep  0001_components.py  0002_pantry_stores_history.py  0003_planning.py  0004_user_profile.py  0005_component_seasonal_availability.py  0006_components_macros_jsonb.py  0007_profile_roll_weights.py  0008_profile_default_macro_targets.py  0009_planned_meal_portions.py  0010_profile_equipment.py
server/nutriroll/: __init__.py  config.py  logging.py
server/nutriroll/api/: __init__.py  app.py
server/nutriroll/api/routers/: components.py  healthz.py  history.py  meta.py  pantry.py  planning.py  profile.py  ratings.py  recipe.py  roll.py  shopping.py  stores.py
server/nutriroll/api/schemas/: __init__.py  component.py  history.py  pantry.py  planning.py  problem.py  profile.py  rating.py  recipe.py  roll.py  shopping.py  store.py
server/nutriroll/db/: __init__.py  base.py  session.py
server/nutriroll/db/models/: __init__.py  component.py  history.py  pantry.py  planning.py  store.py  (+2 more)
server/nutriroll/domain/: __init__.py  category_meta.py  component.py  direction.py  equipment.py  history.py  llm_component_builder.py  llm_config.py  pantry.py  planning.py  profile.py  rating.py  recipe.py  recipe_step_polish.py  roll.py  roll_prompt_parser.py  shopping.py  store.py  weekly_recap.py
server/nutriroll/tools/: __init__.py  dump_openapi.py  seed.py
server/tests/: conftest.py  test_category_meta.py  test_component_domain.py  test_components_api.py  test_direction.py  test_equipment.py  test_healthz.py  test_meta_api.py  test_pantry_api.py  test_planning_api.py  test_profile_api.py  test_ratings_history_api.py  test_recipe_api.py  test_recipe_domain.py  test_recipe_step_polish.py  test_roll_algorithm.py  test_roll_api.py  test_roll_prompt_parser.py  test_seed_loader.py  test_shopping_api.py  test_shopping_domain.py  test_stores_api.py  test_weekly_recap.py
(+125 files in other folders)
